Restore test coverage